CustomObjects/objects/invoiceit_s__Optional_Extra__c.object
<CustomObject>
    <description>Holds data about extra products to include in the Quote.</description>
    <fields>
        <fullName>invoiceit_s__Currency__c</fullName>
        <formula>invoiceit_s__Product_Rate_Plan_Charge__r.invoiceit_s__CurrencyL__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_IT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice IT Product</label>
        <referenceTo>invoiceit_s__Product__c</referenceTo>
        <relationshipLabel>Optional Extras</relationshipLabel>
        <relationshipName>Optional_Extras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Name__c</fullName>
        <formula>invoiceit_s__Invoice_IT_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Obsolete_Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Optional Extras</relationshipLabel>
        <relationshipName>Optional_Extras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Optional Extras</relationshipLabel>
        <relationshipName>Optional_Extras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>invoiceit_s__Quote__c</referenceTo>
        <relationshipLabel>Optional Extras</relationshipLabel>
        <relationshipName>Optional_Extras</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Cost_Price__c</fullName>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Selling_Price2__c</fullName>
        <label>Unit Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Selling_Price__c</fullName>
        <formula>invoiceit_s__Product_Rate_Plan_Charge__r.invoiceit_s__Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Obsolete_Unit Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Optional Extra</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Optional Extras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>